tests/invalid/undef_mode.m
:- module undef_mode.

:- pred x(int).
:- mode x(foo) is det.

x(1).
