tests/invalid/undef_mode.err_exp
undef_mode.m:001: Warning: interface for module `undef_mode' does not export
undef_mode.m:001:   anything.
undef_mode.m:004: In mode declaration for predicate `undef_mode.x'/1:
undef_mode.m:004:   error: undefined mode `foo'/0.
For more information, try recompiling with `-E'.
